syntax = "proto3";
option java_multiple_files = true;
package ir.ui.golestan.grpc;

message CourseResponse {
  int32 id = 1;
  int32 semesterId = 2;
  int32 professorId = 3;

}

message UserIdRequest{
  int32 userId = 1;
}

message RoleResponse{
  int32 userId = 1;
  string role = 2;
}

message Empty {

}


service GrpcService{
    rpc getCourses(Empty) returns (CourseResponse);

    rpc getRole(UserIdRequest) returns (RoleResponse);
}